samples/_failures_safe/1761180163_657f81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7806b526.c: In function ‘main’:
./samples/SAFE/__tmp_7806b526.c:158:45: error: expected ‘;’ at end of input
  158 |         case 1: comp_type = COMP_NONE; break
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_7806b526.c:158:9: error: expected declaration or statement at end of input
  158 |         case 1: comp_type = COMP_NONE; break
      |         ^~~~
./samples/SAFE/__tmp_7806b526.c:158:9: error: expected declaration or statement at end of input
